--- a/src/app/includes/header/header.component.css
+++ b/src/app/includes/header/header.component.css
@@ -1,3 +1,13 @@
+.header h1 {
+  font-size: 20px;
+  margin: 0;
+  padding-left: 20px;
+  font-weight: 600;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
 .chevron::before {
   border-style: solid;
   border-width: 0.15em 0.15em 0 0;
@@ -17,7 +27,7 @@
   height: 100vh;
   transition: 0.3s;
   width: 60px;
-  background: #1d1e2c;
+  background: #000000;
   color: #6d6e7e;
 }
 .sidebar.expanded {
@@ -46,16 +56,9 @@
   align-items: center;
   justify-content: center;
   padding: 10px;
-  background: #0f1017;
+  background: #000000;
 }
-.sidebar .header h1 {
-  font-size: 20px;
-  color: #6d6e7e;
-  margin: 0;
-  flex: 1;
-  transition: 0.3s;
-  margin-left: -100px;
-}
+
 .sidebar .header .chevron {
   color: #6d6e7e;
   cursor: pointer;
@@ -117,4 +120,107 @@
   transition: 0.3s;
   max-width: 0px;
   overflow: hidden;
+}
+
+/*--------------------------------------------------------------
+# Navigation Menu
+--------------------------------------------------------------*/
+/* Desktop Navigation */
+.nav-menu {
+  padding: 30px 0 0 0;
+}
+
+.nav-menu * {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav-menu > ul > li {
+  position: relative;
+  white-space: nowrap;
+}
+
+.nav-menu a,
+.nav-menu a:focus {
+  display: flex;
+  align-items: center;
+  color: #a8a9b4;
+  padding: 12px 15px;
+  margin-bottom: 8px;
+  transition: 0.3s;
+  font-size: 15px;
+}
+
+.nav-menu a i,
+.nav-menu a:focus i {
+  font-size: 24px;
+  padding-right: 8px;
+  color: #6f7180;
+}
+
+.nav-menu a:hover,
+.nav-menu .active,
+.nav-menu .active:focus,
+.nav-menu li:hover > a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.nav-menu a:hover i,
+.nav-menu .active i,
+.nav-menu .active:focus i,
+.nav-menu li:hover > a i {
+  color: #149ddd;
+}
+
+/* Mobile Navigation */
+.mobile-nav-toggle {
+  position: fixed;
+  right: 15px;
+  top: 15px;
+  z-index: 9998;
+  border: 0;
+  font-size: 24px;
+  transition: all 0.4s;
+  outline: none !important;
+  background-color: #149ddd;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.mobile-nav-active {
+  overflow: hidden;
+}
+
+.mobile-nav-active {
+  left: 0;
+}
+
+.social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #212431;
+  color: rgb(255, 255, 255);
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+.social-links a:hover {
+  background: #149ddd;
+  color: #fff;
+  text-decoration: none;
 }
