--- a/src/app/includes/header/header.component.html
+++ b/src/app/includes/header/header.component.html
@@ -10,10 +10,15 @@
       <a href="https://github.com/cillian51" class="github"
         ><i class="bi bi-github"></i
       ></a>
+      <a
+        href="https://www.linkedin.com/in/cillian-rosay-607ab0209/"
+        class="linkedin"
+        ><i class="bi bi-linkedin"></i
+      ></a>
     </div>
     <nav id="navbar" class="nav-menu navbar">
       <ul>
-        <a href="#hero" class="nav-link scrollto active"
+        <a href="#hero" class="nav-link scrollto"
           ><i class="bi bi-house"></i><span> Home</span></a
         >
         <a href="#about" class="nav-link"
