--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -862,11 +862,12 @@
       <div class="section-title">
         <h2>Contact</h2>
         <p>
-          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
-          aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
-          quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-          fugiat sit in iste officiis commodi quidem hic quas.
+          Si vous avez des questions ou des commentaires sur mon travail,
+          n'hésitez pas à me contacter via le formulaire ci-dessous. Je suis
+          toujours ouvert pour discuter de nouveaux projets et collaborer avec
+          de nouvelles personnes et organisations.
         </p>
+        <p>Merci pour votre visite.</p>
       </div>
 
       <div class="row" data-aos="fade-in">
@@ -875,23 +876,23 @@
             <div class="address">
               <i class="bi bi-geo-alt"></i>
               <h4>Location:</h4>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>13 rue gambetta, 51150, Bouzy</p>
             </div>
 
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p>rosay.cillian@gmail.com</p>
             </div>
 
             <div class="phone">
               <i class="bi bi-phone"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <p>(+33)6 17 39 71 22</p>
             </div>
 
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+              src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJl-uL-YVl6UcRQbDjHMDyutI&key=AIzaSyDD1FEM4KCAQxVws5G2FaVKUOth0NIfIeA"
               frameborder="0"
               style="border:0; width: 100%; height: 290px;"
               allowfullscreen
