--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -4,22 +4,11 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../../assets/img/image_home.jpg") top center;
+  background: url('../../assets/img/image_home.jpg') top center;
   background-size: cover;
 }
 
-#hero:before {
-  content: "";
-  background: rgba(5, 13, 24, 0.3);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-}
-
-#hero .hero-container {
+.content #hero .hero-container {
   position: relative;
   z-index: 2;
   min-width: 300px;
@@ -37,7 +26,7 @@
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 #hero p span {
