--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -5,6 +5,11 @@
 >
   <div class="hero-container" data-aos="fade-in">
     <h1>Cillian ROSAY</h1>
+    <script src="../../assets/js/main.js"></script>
+    <div id="container">
+      <div id="text"></div>
+      <div id="cursor"></div>
+    </div>
     <p>
       I'm Developper
       <span
