--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -5,17 +5,12 @@
 >
   <div class="hero-container" data-aos="fade-in">
     <h1>Cillian ROSAY</h1>
-    <script src="../../assets/js/main.js"></script>
-    <div id="container">
-      <div id="text"></div>
-      <div id="cursor"></div>
-    </div>
     <p>
-      I'm Developper
+      I'm
       <span
-        class="typed"
-        data-typed-items="Designer, Developer, Freelancer, Photographer"
-      ></span>
+        id="text"
+      ></span
+      ><span id="cursor"></span>
     </p>
   </div>
 </section>
