--- a/src/app/includes/footer/footer.component.css
+++ b/src/app/includes/footer/footer.component.css
@@ -2,26 +2,16 @@
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  padding: 15px;
   color: #f4f6fd;
   font-size: 14px;
-  position: fixed;
-  left: 0;
+  position: absolute;
+  padding-bottom: 30px;
   bottom: 0;
-  width: 300px;
-  z-index: 9999;
-  background: #040b14;
+  width: auto;
 }
 
 #footer .copyright {
   text-align: center;
-}
-
-#footer .credits {
-  padding-top: 5px;
-  text-align: center;
-  font-size: 13px;
-  color: #eaebf0;
 }
 
 @media (max-width: 1199px) {
