--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -6,7 +6,7 @@
   <div class="hero-container" data-aos="fade-in">
     <h1>Cillian ROSAY</h1>
     <p>
-      I'm
+      I'm a
       <span id="text"></span><span id="cursor"></span>
     </p>
   </div>
@@ -41,7 +41,7 @@
               <ul>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <strong>Birthday:</strong> <span>1 May 1995</span>
+                  <strong>Birthday:</strong> <span>1 September 2000</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
@@ -50,11 +50,11 @@
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
-                  <span>+123 456 7890</span>
+                  <span>(+33)6 17 39 71 22</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>City:</strong>
-                  <span>New York, USA</span>
+                  <span>Bouzy, France</span>
                 </li>
               </ul>
             </div>
@@ -62,19 +62,15 @@
               <ul>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                  <span>30</span>
+                  <span>22</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
-                  <span>Master</span>
+                  <span>Computer Engineering Degree</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <strong>PhEmailone:</strong> <span>email@example.com</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Freelance:</strong> <span>Available</span>
+                  <strong>Email:</strong> <span>rosay.cillian@gmail.com</span>
                 </li>
               </ul>
             </div>
@@ -110,15 +106,6 @@
         <div class="col-lg-6" data-aos="fade-up">
           <div class="progress">
             <span class="skill">HTML <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="100"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
-            </div>
           </div>
 
           <div class="progress">
@@ -645,7 +632,7 @@
             <div class="address">
               <i class="bi bi-geo-alt"></i>
               <h4>Location:</h4>
-              <p>13 rue gambetta, 51150, Bouzy</p>
+              <p>51150, Bouzy</p>
             </div>
 
             <div class="email">
