--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -103,75 +103,100 @@
       </div>
 
       <div class="row skills-content">
-        <div class="col-lg-6" data-aos="fade-up">
+        <div class="col-lg-6">
           <div class="progress">
-            <span class="skill">HTML <i class="val">100%</i></span>
+            <span class="skill">Python <i class="val">100%</i></span>
+            <p>
+              <ngb-progressbar
+                type="info"
+                [value]="100"
+                [striped]="true"
+                [animated]="true"
+                height="20px"
+                ><i class="invisible">100%</i></ngb-progressbar
+              >
+            </p>
           </div>
 
           <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
+            <span class="skill">Javascript <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="90"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
+              <p>
+                <ngb-progressbar
+                  type="info"
+                  [value]="90"
+                  [striped]="true"
+                  [animated]="true"
+                  height="20px"
+                  ><i class="invisible">90</i>
+                </ngb-progressbar>
+              </p>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">75%</i></span>
+            <span class="skill">HTML <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="75"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
+              <p>
+                <ngb-progressbar
+                  type="info"
+                  [value]="75"
+                  [striped]="true"
+                  [animated]="true"
+                  height="20px"
+                  ><i class="invisible">75</i>
+                </ngb-progressbar>
+              </p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
+            <span class="skill">C <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="80"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
+              <p>
+                <ngb-progressbar
+                  type="info"
+                  [value]="80"
+                  [striped]="true"
+                  [animated]="true"
+                  height="20px"
+                  ><i class="invisible">80</i>
+                </ngb-progressbar>
+              </p>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+            <span class="skill">Power platform <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="90"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
+              <p>
+                <ngb-progressbar
+                  type="info"
+                  [value]="90"
+                  [striped]="true"
+                  [animated]="true"
+                  height="20px"
+                  ><i class="invisible">90</i>
+                </ngb-progressbar>
+              </p>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Photoshop <i class="val">55%</i></span>
+            <span class="skill">Photoshop <i class="val">65%</i></span>
             <div class="progress-bar-wrap">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                aria-valuenow="55"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
+              <p>
+                <ngb-progressbar
+                  type="info"
+                  [value]="65"
+                  [striped]="true"
+                  [animated]="true"
+                  height="20px"
+                  ><i class="invisible">65</i>
+                </ngb-progressbar>
+              </p>
             </div>
           </div>
         </div>
