--- a/src/app/includes/header/header.component.css
+++ b/src/app/includes/header/header.component.css
@@ -1,32 +1,20 @@
 .header h1 {
   font-size: 20px;
   margin: 0;
-  padding-left: 20px;
   font-weight: 600;
   text-align: center;
   font-family: 'Poppins', sans-serif;
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.chevron::before {
-  border-style: solid;
-  border-width: 0.15em 0.15em 0 0;
-  content: '';
-  display: inline-block;
-  height: 0.35em;
-  left: 0.15em;
-  position: relative;
-  top: 0.3em;
-  vertical-align: top;
-  width: 0.35em;
-}
+
 .sidebar {
   position: fixed;
   left: 0;
   top: 0;
   height: 100vh;
   transition: 0.3s;
-  width: 60px;
+  width: 0px;
   background: #040b14;
   color: #6d6e7e;
 }
@@ -51,7 +39,7 @@
 .sidebar.expanded .content .link .children .content {
   padding-left: 30px;
 }
-.sidebar .header {
+.sidebar.expanded .header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,31 +47,6 @@
   background: #040b14;
 }
 
-.sidebar .header .chevron {
-  color: #6d6e7e;
-  cursor: pointer;
-  transition: 0.3s;
-  margin-left: -25px;
-  padding: 10px;
-  min-width: 20px;
-  height: 20px;
-  display: block;
-  text-align: center;
-}
-.sidebar .header .chevron::before {
-  transition: 0.3s;
-  transform: rotate(45deg);
-}
-.sidebar .header .chevron:hover {
-  color: white;
-}
-.sidebar .content .link .children .content {
-  background: #27283a;
-  padding-left: 10px;
-}
-.sidebar .content .link .children .content.active {
-  background: #191a27;
-}
 .sidebar .content .link .content {
   display: flex;
   align-items: center;
