--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,3 +1,4 @@
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 <!-- ======= Hero Section ======= -->
 <section
   id="hero"
@@ -651,7 +652,7 @@
         <p>Merci pour votre visite.</p>
       </div>
 
-      <div class="row" data-aos="fade-in">
+      <div class="row" data-aos="fade-in" data-aos-duration="500">
         <div class="col-lg-5 d-flex align-items-stretch">
           <div class="info">
             <div class="address">
@@ -681,7 +682,11 @@
           </div>
         </div>
 
-        <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+        <div
+          class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch"
+          data-aos="fade-in"
+          data-aos-duration="500"
+        >
           <form
             action="forms/contact.php"
             method="post"
